WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219692
REGRESSION (
r269812
): Amazon Prime: thumbnail fails to expand properly
https://bugs.webkit.org/show_bug.cgi?id=219692
Summary
REGRESSION (r269812): Amazon Prime: thumbnail fails to expand properly
Antoine Quint
Reported
2020-12-09 08:52:12 PST
REGRESSION (
r269812
): Amazon Prime: thumbnail fails to expand properly
Attachments
Patch
(6.93 KB, patch)
2020-12-09 09:08 PST
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Patch for landing
(12.95 KB, patch)
2020-12-09 10:17 PST
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2020-12-09 09:08:04 PST
Created
attachment 415765
[details]
Patch
Antoine Quint
Comment 2
2020-12-09 09:08:10 PST
<
rdar://problem/71878636
>
Antoine Quint
Comment 3
2020-12-09 09:09:43 PST
This is due to incorrectly running a CSS Transition for the `position` property.
Antoine Quint
Comment 4
2020-12-09 10:17:26 PST
Created
attachment 415772
[details]
Patch for landing
EWS
Comment 5
2020-12-09 10:50:45 PST
Committed
r270589
: <
https://trac.webkit.org/changeset/270589
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 415772
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug